tests/ui/traits/final/final-kw.rs
//@ revisions: ungated gated

#[cfg(ungated)]
trait Trait {
    final fn foo() {}
    //~^ ERROR `final` on trait functions is experimental
}

fn main() {}
